fixed panel content visibility bug, and made scrollbar always visible to avoid entry sizing issue

--- a/public/styles/default.css
+++ b/public/styles/default.css
@@ -127,6 +127,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 #list .entries {
   overflow-x: hidden;
+  overflow-y: scroll;
 }
 #list .presenter {
   background: #fff;
